--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@
 /TestSoft_TFT_eSPI/Test_Touch_Controller/Test_Touch_Controller.sln
 /TestSoft_TFT_eSPI/Test_Touch_Controller/Test_Touch_Controller.vcxproj
 /Soft_Mesh_Example/Mesh_Base_Example_21_08_09_01
+/Схема и печатная плата ESP32Base_01/Backup Of ESP32Base_01R.pdsbak
+/Схема и печатная плата ESP32Base_01/Backup Of ESP32Base_02.pdsbak
