--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,9 @@
 /Soft_Mesh_Example/Mesh_Base_Example_21_08_09_01
 /Схема и печатная плата ESP32Base_01/Backup Of ESP32Base_01R.pdsbak
 /Схема и печатная плата ESP32Base_01/Backup Of ESP32Base_02.pdsbak
+/Схема и печатная плата ESP32Base_01/ESP32Base_02.pdsprj.DECIMA.moseichuk.workspace
+/Схема и печатная плата ESP32Base_01/ESP32Base_02.pdsprj.ZALMAN.proma.workspace
+/Схема и печатная плата ESP32Base_01/Last Loaded ESP32Base_01R.pdsbak
+/Схема и печатная плата ESP32Base_01/Last Loaded ESP32Base_02.pdsbak
+/Схема и печатная плата ESP32Base_01/ESP32Base_01.pdsprj.DECIMA.moseichuk.workspace
+/Схема и печатная плата ESP32Base_01/ESP32Base_01.pdsprj.ZALMAN.proma.workspace
