--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@
 /Схема и печатная плата ESP32Base_01/Last Loaded ESP32Base_02.pdsbak
 /Схема и печатная плата ESP32Base_01/ESP32Base_01.pdsprj.DECIMA.moseichuk.workspace
 /Схема и печатная плата ESP32Base_01/ESP32Base_01.pdsprj.ZALMAN.proma.workspace
+/libraries/XPT2046_Touchscreen-master.zip
